--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,6 @@
 services:
   - name: web
     type: web
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install -r requirements.txt
     startCommand: gunicorn -b 0.0.0.0:5000 nlpbot:app
