--- a/render.yaml
+++ b/render.yaml
@@ -2,4 +2,5 @@ services:
   - name: web
     type: web
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -b 0.0.0.0:5000 nlpbot:app
+    startCommand: gunicorn -b 0.0.0.0:5000 app:app
+
