--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,4 @@ services:
   - name: web
     type: web
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -b 0.0.0.0:5000 app:app
-
+    startCommand: python app.py
